WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213419
[JSC] Attempt to reduce timeout failures on Apple Watch Series 3
https://bugs.webkit.org/show_bug.cgi?id=213419
Summary
[JSC] Attempt to reduce timeout failures on Apple Watch Series 3
Yusuke Suzuki
Reported
2020-06-19 16:53:56 PDT
[JSC] Attempt to reduce timeout failures on Apple Watch Series 3
Attachments
Patch
(7.11 KB, patch)
2020-06-19 16:55 PDT
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
Patch for landing
(9.08 KB, patch)
2020-06-19 17:25 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-06-19 16:55:30 PDT
Created
attachment 402350
[details]
Patch
Mark Lam
Comment 2
2020-06-19 16:59:48 PDT
Comment on
attachment 402350
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402350&action=review
r=me
> JSTests/stress/memcpy-typed-loops.js:31 > -for (let i=0; i<10000000; ++i) noLoop(arr1, arr2) > -for (let i=0; i<10000000; ++i) invalidStart(arr1, arr2) > +for (let i=0; i<100000; ++i) noLoop(arr1, arr2) > +for (let i=0; i<100000; ++i) invalidStart(arr1, arr2)
Instead of this, can we just do a $vm.useJIT() test and set the iteration count accordingly? Since watch doesn't use JIT, we can go with an even smaller count than this. Looks like there isn't a $vm.useJIT() but you can add one.
> JSTests/stress/set-iteration-oas.js:20 > +for (var i = 0; i < 1e4; ++i)
Ditto.
Yusuke Suzuki
Comment 3
2020-06-19 17:00:28 PDT
Comment on
attachment 402350
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402350&action=review
>> JSTests/stress/memcpy-typed-loops.js:31 >> +for (let i=0; i<100000; ++i) invalidStart(arr1, arr2) > > Instead of this, can we just do a $vm.useJIT() test and set the iteration count accordingly? Since watch doesn't use JIT, we can go with an even smaller count than this. Looks like there isn't a $vm.useJIT() but you can add one.
Fixed.
>> JSTests/stress/set-iteration-oas.js:20 >> +for (var i = 0; i < 1e4; ++i) > > Ditto.
Nice. Fixed.
Yusuke Suzuki
Comment 4
2020-06-19 17:25:31 PDT
Created
attachment 402358
[details]
Patch for landing
EWS
Comment 5
2020-06-19 20:17:47 PDT
Committed
r263312
: <
https://trac.webkit.org/changeset/263312
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402358
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-06-19 20:18:14 PDT
<
rdar://problem/64553456
>
Radar WebKit Bug Importer
Comment 7
2020-06-19 20:18:18 PDT
<
rdar://problem/64553458
>
Mark Lam
Comment 8
2020-06-23 11:06:14 PDT
<
rdar://problem/64553456
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug