[JSC] Attempt to reduce timeout failures on Apple Watch Series 3 https://bugs.webkit.org/show_bug.cgi?id=213419

Reviewed by Mark Lam.

JSTests:

Look into timeout tests, and

1. If the test is using too many iterations, decrease the count.
2. If the test is still useful while iteration count is not so much, try attaching `slow!` to see the effect on the bot.

* stress/memcpy-typed-loops.js:
* stress/op_bitand.js:
* stress/op_bitor.js:
* stress/op_bitxor.js:
* stress/op_mul-ConstVar.js:
* stress/op_mul-VarConst.js:
* stress/op_mul-VarVar.js:
* stress/op_sub-ConstVar.js:
* stress/op_sub-VarConst.js:
* stress/op_sub-VarVar.js:
* stress/set-iteration-oas.js:
* stress/value-to-boolean.js:

Source/JavaScriptCore:

* tools/JSDollarVM.cpp:
(JSC::functionUseJIT):
(JSC::JSDollarVM::finishCreation):


Canonical link: https://commits.webkit.org/226218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263312 268f45cc-cd09-0410-ab3c-d52691b4dbfc